# test_poetry

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
src/config/: config.yaml
src/data/: get_data.sh
src/preprocess/: preprocess.py
tests/: create_tests_init.sh
tests/test_preprocess/: test_preprocess.py
workflows/: ci.yml
