[tool.poetry]
name = "demo"
version = "0.1.0"
description = "demo"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pip = "^21.0.1"
autoflake = "^1.4"
pytest = "^6.2.2"
black = "^20.8b1"
numpy = "^1.20.1"
isort = "^5.7.0"
mock = "^4.0.3"
mypy = "^0.800"
responses = "^0.12.1"
scipy = "^1.6.0"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
jupyterlab = "^3.0.7"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
